--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
@@ -18,6 +19,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express-validator": "^7.2.1",
     "glob": "^11.0.1",
     "rimraf": "^6.0.1"
